refactor: Swagger added for Reset Password
